--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,13 @@ i {
     padding: 60px 0;
 }
 
+main {
+    background: url(/img/pofo-background3.jpg);
+    background-size: cover;
+    height: 100vh;
+    background-attachment: fixed;
+    padding: 60px 0;
+}
 
 footer {
     padding: 30px 0;
