--- a/css/styles.css
+++ b/css/styles.css
@@ -488,7 +488,7 @@ progress {
 }
 
 .lead {
-  font-size: 1.25rem;
+  font-size: 1.50rem;
   font-weight: 300;
 }
 
@@ -10837,9 +10837,22 @@ html {
   font-size: 2.25rem;
   line-height: 2rem;
 }
+
+.part-title {
+  font-size: 1.75rem;
+  line-height: 2rem;
+}
+
 @media (min-width: 992px) {
   .page-section .page-section-heading {
     font-size: 3rem;
+    line-height: 2.5rem;
+  }
+}
+
+@media (min-width: 992px) {
+  .part-title {
+    font-size: 2.5rem;
     line-height: 2.5rem;
   }
 }
